--- a/.github/workflows/my_first_actions.yaml
+++ b/.github/workflows/my_first_actions.yaml
@@ -7,8 +7,12 @@ on:
     branches: [ "main" ]
     
 jobs:
-  build:
+  example_matrix:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version: [10, 12, 13, 14]
+        os: [ubuntu-latest, windows-latest, macos-latest]
   
     steps:
     - uses: actions/checkout@v3
